Fixed some bugs. Added README.md
