# backend/docs/swagger.json
@@ -39,7 +39,7 @@
                 }
             },
             "post": {
-                "description": "Add a contestant to the database",
+                "description": "Add a contestant to the database, the contestant will also be added to the queue",
                 "consumes": [
                     "application/json"
                 ],
@@ -137,7 +137,7 @@
         },
         "/game-start": {
             "post": {
-                "description": "Start a game for a contestant",
+                "description": "Start a game for a contestant if the optional query parameter timestamp is provided the specific queueitem will be started otherwise the first item in the queue will be started",
                 "consumes": [
                     "application/json"
                 ],
@@ -148,6 +148,14 @@
                     "example"
                 ],
                 "summary": "Start a game for a contestant",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "imestamp of queueitem to start",
+                        "name": "timestamp",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -212,7 +220,7 @@
         },
         "/queue/{timestamp}": {
             "delete": {
-                "description": "Delete a contestant from the queue",
+                "description": "Delete a queue item from the queue",
                 "consumes": [
                     "application/json"
                 ],
@@ -226,10 +234,9 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "timestamp of the contestant to delete",
+                        "description": "timestamp of the queue item to delete",
                         "name": "timestamp",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
                     }
                 ],
                 "responses": {
